--- a/Edit In/Edit In.entitlements
+++ b/Edit In/Edit In.entitlements
@@ -4,6 +4,10 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.app.zxlee.Edit-In</string>
+	</array>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 </dict>
