check write permission at custom cache path before copying & opening image

--- a/Edit In.../Edit In....entitlements
+++ b/Edit In.../Edit In....entitlements
@@ -8,6 +8,8 @@
 	<array>
 		<string>group.app.zxlee.EditIn</string>
 	</array>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 </dict>
